Added updated social media signin page

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -14,6 +14,7 @@ $path: "/public/images/";
 // Pages .scss files
 @import 'pages/hub-sign-in';
 @import 'pages/slides';
+@import 'pages/sm-sign-in';
 
 
 // Related items
