--- a/app/views/hub/sm-signin.html
+++ b/app/views/hub/sm-signin.html
@@ -12,10 +12,21 @@
     <div class="grid-row">
       <div class="column-quarter">.</div>
         <div class="column-one-half sign-in-container" style="">
-            
+              
           <h1 class="heading-large">
            Sign in with your<br>identity account
           </h1>
+
+          <p>Set up an identity account with a certified company so you can securely sign in to check your State Pension</p>
+
+          <form id="" class="js-validate" novalidate="novalidate" action="/hub/slide-about{{formQuery}}" accept-charset="UTF-8" method="get">
+            {{formData | safe}}
+            <input class="button" id="next-button" type="submit" value="Set up an identity account">
+          </form>
+          <br>
+          <p>or</p>
+
+          <p>Sign in with an identity account that you set up with a certified company in the past.</p>
 
           {{formData | safe}}
           
@@ -37,19 +48,10 @@
             {% endfor %}
             </ul>
           </div>
-          <p>or</p>
-
-          <form id="" class="js-validate" novalidate="novalidate" action="/about-choosing-a-company{{formQuery}}" accept-charset="UTF-8" method="get">
-            {{formData | safe}}
-            <input class="button" id="next-button" type="submit" value="Set up an identity account">
-  <!--           <input type="hidden"  name='registration' value="true">
-            <input type="hidden"  name='driving_licence' value="true">
-            <input type="hidden"  name='passport' value="true"> -->
-          </form>
 
           <br>
           <br>
-          <p style="text-align: left;">UK government trusts these certified companies as they are part of GOV.UK Verify. Set up an identity account with a certified company so you can securely sign in to {{serviceNameLower}}.</p>
+          <p style="text-align: left;">UK government trusts these certified companies as they are part of GOV.UK Verify.</p>
           <img src="/public/images/verify-certified-badge.svg" width="75%" class="">
           <br>
           <br>
@@ -72,64 +74,6 @@
 
 <style type="text/css">
 
-  .idp-links-picker {
-  text-align: left;
-  padding: 10px 0;
-  border-bottom: 1px solid lightgrey;
-  width: 33%;
-  display: block;
-}
-
-.idp-icon-container {
-  width: 43px;
-  display: inline-block;
-  text-align: center;
-  padding-right: 15px;
-}
-
-.idp-icon {
-  max-height: 35px;
-  max-width: 43px;
-  vertical-align: middle;
-}
-
-.idp-list-container {
-text-align: center;
-}
-
-.idp-links {
-  text-align: left;
-  padding: 10px 0;
-  border-bottom: 1px solid lightgrey;
-  width: 50%;
-  margin: 0 auto;
-  display: block;
-}
-
-.idp-links:last-child {
-  border-bottom: none;
-}
-
-.idp-links:last-child {
-  border-bottom: none;
-}
-
-
-.button-link{
-    background: none;
-    border: none;
-    font-size: 19px;
-    text-decoration: underline;
-    color: #005ea5;
-    cursor: pointer;
-}
-
-.sign-in-container {
-  text-align: center; 
-  border: 5px solid #dee0e2; 
-  margin-top: 10px; 
-  padding-bottom: 30px;
-}
 
 </style>
 
