--- a/app/views/hub/sm-signin.html
+++ b/app/views/hub/sm-signin.html
@@ -14,21 +14,22 @@
         <div class="column-one-half sign-in-container" style="">
               
           <h1 class="heading-large">
-           Prove your identity with an<br>identity account
+           Prove your identity with an<br>online identity
           </h1>
 
-          <p>To securely access {{serviceNameLower}} you need to sign in with an identity account.</p>
+          <h2 class="heading-medium">Create an online identity</h2>
+          <p>To securely access {{serviceNameLower}} you need to sign in with an online identity.</p>
 
           <form id="" class="js-validate" novalidate="novalidate" action="/hub/slide-about{{formQuery}}" accept-charset="UTF-8" method="get">
             {{formData | safe}}
-            <input class="button" id="next-button" type="submit" value="Set up a new identity account">
+            <input class="button" id="next-button" type="submit" value="Set up a new online identity">
           </form>
           <br>
           <p>or</p>
 
-          <h3 class="heading-small">Sign in with an existing identity account</h3>
+          <h3 class="heading-medium">Sign in with an existing online identity</h3>
 
-          <p>If you've already set one up, select your identity account.</p>
+          <p>If you've already set one up, select your online identity.</p>
 
           {{formData | safe}}
           
@@ -64,7 +65,7 @@
 
               <p>Companies apply to be part of GOV.UK Verify. They are certified when they meet security and privacy standards set by government so you can trust them with your personal information.</p>
 
-              <p>When a government service uses GOV.UK Verify, you can access the service with the identity account you set up with the certified company.
+              <p>When a government service uses GOV.UK Verify, you can access the service with the online identity you set up with the certified company.
               </p>
 
             </div>
