Updated slides to step by step for testing

--- a/app/views/hub/slide-about.html
+++ b/app/views/hub/slide-about.html
@@ -9,13 +9,12 @@
 
   {{ formData | safe }}
 
-	<p>GOV.UK Verify is a secure service built to fight the growing problem of online identity theft.</p>
+	<h1 class="slide-heading">Setting up an online identity</h1>
 
-	{% if servicewhyVerifysUsed.length > 1 %}
-  	<p>{{serviceProvider}} uses Verify to help prevent other people from {{servicewhyVerifysUsed | safe}}, as it stops someone from pretending to be you.</p>
-  {% else %}
-  	<p>Verify helps prevent other people from pretending to be you.</p>
-  {% endif %}
+  <p>Its a safe, secure and afndlas...</p>
+
+  <p>It takes 3 easy steps...</p>
+
 
   <div class="form-group">
     <div class="actions">
