--- a/app/views/hub/slide-create-account.html
+++ b/app/views/hub/slide-create-account.html
@@ -9,15 +9,15 @@
 
   {{ formData | safe }}
 
-	<h1 class="slide-heading">2. Create your identity account</h1>
+	<h1 class="slide-heading">2. Create your online identity</h1>
 
-  <p>You'll be taken to the companies website to create an identity account.</p>
+  <p>You'll be taken to the companies website to create an online identity.</p>
   <!-- <p>You'll need to create a username and password, and add some personal details so they know who you are.</p> -->
   <p>You'll be able to use this account to securely access a range of other services across GOV.UK.</p>
 
   <details role="group">
     <summary role="button" aria-controls="details-content-0" aria-expanded="false">
-      <span class="summary">More about creating an identity account</span>
+      <span class="summary">More about creating an online identity</span>
     </summary>
     <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true">
       <p>You'll be asked to provide details from a range of documents that we will need to double check with the trusted institue that provided them.</p>
