Updated pages for testing

--- a/app/views/hub/choose-a-company.html
+++ b/app/views/hub/choose-a-company.html
@@ -11,13 +11,13 @@
   <div class="grid-row">
     {% include "includes/verify-logo.html" %}
     <div class="column-two-thirds">
-  		<h1 class="heading-large">Choose a company to verify your identity</h1>
+  		<h1 class="heading-large">Select the online identity you<br>want to sign up with</h1>
 
-        <p>You don't have to be an existing customer with a company.</p>
+        <p>You don't have to be an existing customer with the company that provides it.</p>
 
         <p>They ask you to provide personal information and evidence, and then check it's correct using the new, secure systems they built.</p>
 
-        <p><a href="#">Why there’s a choice of companies</a></p>
+        <p><a href="#">Why there’s a choice of online identities</a></p>
 
         {{ formData | safe }}
 
