--- a/app/views/hub/hub-sign-in.html
+++ b/app/views/hub/hub-sign-in.html
@@ -13,7 +13,7 @@
   {% include "includes/verify-logo.html" %}
     <div class="column-two-thirds">
       <h2 class="heading-large">Who do you have an identity account with?</h2>
-      <p>If you don’t have an identity account, you can <a href="/hub/slide-about{{ formQuery | safe }}&registration=true">create a new one</a>.</p> 
+      <p>If you don’t have an identity account, you can <a href="/hub/slide-all-long{{ formQuery | safe }}&registration=true">create a new one</a>.</p> 
     </div>
   </div>
 
