--- a/app/views/hub/slide-all.html
+++ b/app/views/hub/slide-all.html
@@ -21,26 +21,12 @@
 	</ul>
 	<p>You'll need about 15 minutes to get set up.<!--  up but then you'll have an account that can securely access a range of govenment services --></p>
 
-    <details role="group">
-    <summary role="button" aria-controls="details-content-0" aria-expanded="false">
-      <span class="summary">More about setting up an online idenity</span>
-    </summary>
-    <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true">
-    </div>
-  </details>
-
-	
   <div class="form-group">
     <div class="actions">
-      <input class="button" id="next-button" type="submit" value="Set up your online identity">
+      <input class="button" id="next-button" type="submit" value="Pick an online identity provider">
+      <span style="display:inline-block; margin-top: 5px; padding-left: 5px; font-size: 24px"> or <a href="#">find out more</a></span>
     </div>
   </div>
-<!--   <div class="form-group">
-    <div class="actions">
-      <input class="button" id="next-button" type="submit" value="Pick an online identity provider">
-      <span style="display:inline-block; margin-top: 10px; padding-left: 5px;"> or <a href="#">find out more</a></span>
-    </div>
-  </div> -->
 </form>
 
 {% endblock %}
