--- a/app/views/hub/sm-signin.html
+++ b/app/views/hub/sm-signin.html
@@ -17,10 +17,10 @@
            Prove your identity with an<br>online identity
           </h1>
 
-          <h2 class="heading-medium">Create an online identity</h2>
+          <h2 class="heading-medium">Create an online identity</h2>sadasdsad
           <p>To securely access {{serviceNameLower}} you need to sign in with an online identity.</p>
 
-          <form id="" class="js-validate" novalidate="novalidate" action="/hub/slide-about{{formQuery}}" accept-charset="UTF-8" method="get">
+          <form id="" class="js-validate" novalidate="novalidate" action="/hub/slide-all-long{{formQuery}}" accept-charset="UTF-8" method="get">
             {{formData | safe}}
             <input class="button" id="next-button" type="submit" value="Set up a new online identity">
           </form>
