Added styling for personal tax account pages

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -133,3 +133,17 @@ $path: "/public/images/";
       margin-bottom: 8px;
     }
   }
+
+
+// Service signin page
+
+.label-header {
+  font-weight: bold;
+}
+
+.label-subhead {
+  font-size: 19px;
+  color: #6f777b;
+  font-weight: 400;
+}
+
