--- a/app/views/hub/slide-all.html
+++ b/app/views/hub/slide-all.html
@@ -5,7 +5,7 @@
 
 {% block slide_content %}
 
-<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/slide-pick-idp" accept-charset="UTF-8" method="get">
+<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/select-documents" accept-charset="UTF-8" method="get">
 
   {{ formData | safe }}
 
@@ -24,7 +24,7 @@
   <div class="form-group">
     <div class="actions">
       <input class="button" id="next-button" type="submit" value="Pick an online identity provider">
-      <span style="display:inline-block; margin-top: 5px; padding-left: 5px; font-size: 24px"> or <a href="#">find out more</a></span>
+      <span style="display:inline-block; margin-top: 5px; padding-left: 5px; font-size: 24px"> or <a href="/hub/slide-pick-idp">find out more</a></span>
     </div>
   </div>
 </form>
