--- a/app/views/hub/sm-signin-2col.html
+++ b/app/views/hub/sm-signin-2col.html
@@ -23,6 +23,7 @@
         <form id="" class="js-validate" novalidate="novalidate" action="/hub/slide-all{{formQuery}}" accept-charset="UTF-8" method="get">
           {{formData | safe}}
           <input class="button" id="next-button" type="submit" value="Set up an identity account">
+          <input type="hidden" name="registration" value="true">
         </form>
         <br>
 
@@ -40,7 +41,7 @@
               <li class="idp-links">
                 <div class="button-wrap">
                   <form method="POST" action="{{idpRoot}}/{{ idp.slug }}/sign-in{{formQuery}}&idp={{idp.slug}}&serviceLOA={{serviceLOA}}">
-                    <input type="hidden" name="password" value="jolly-roger">
+                    <input type="hidden" name="registration" value="false">
                     <div class="idp-icon-container">
                       <img src="/public/images/idp-icons/{{idp.slug}}.png" class="idp-icon">
                     </div>
