Updated document inputs

--- a/app/views/idp/credit-card.html
+++ b/app/views/idp/credit-card.html
@@ -23,7 +23,7 @@
 
 					<div class="form-group"  data-required="Please select your card type">
 						<fieldset class="inline">
-							<legend class="form-label">Card type</legend>
+							<legend class="form-label-bold">Card type</legend>
 				      <div class="multiple-choice">
 				        <input id="radio-inline-1" type="radio" name="radio-inline-group" value="Yes">
 				        <label for="radio-inline-1">Visa</label>
@@ -36,12 +36,12 @@
 					</div>
 
 					<div class="form-group"  data-required="Please enter your card number">
-						<label class="form-label">Card number</label>
+						<label class="form-label-bold">Card number</label>
 						<input class="form-control" type="text">
 					</div>
 
 					<div class="form-group" data-required="Please enter your card expiry date">
-						<legend class="form-label">Expiry date</legend>
+						<legend class="form-label-bold">Expiry date</legend>
 						<div class="form-date">
 							<div class="form-group form-group-month">
 								<label for="dob-month">Month</label>
@@ -55,7 +55,7 @@
 					</div>
 
 					<div class="form-group" data-required="Please enter the cardholder's name">
-						<label class="form-label">Cardholder's name</label>
+						<label class="form-label-bold">Cardholder's name</label>
 						<input class="form-control" type="text">
 					</div>
 
@@ -65,7 +65,6 @@
 							Continue
 						</button>
 					</div>
-
 					<p><a href="#">I don't have my bank account details with me</a></p>
 
 
