--- a/app/views/idp/driving-licence.html
+++ b/app/views/idp/driving-licence.html
@@ -26,29 +26,44 @@
 
 					<div class="form-group">
 						<div class="form-group">
-							<label class="form-label">Item 4a on your licence</label>
-							<input class="form-control form-control-xsmall" type="text" maxlength="2">
-							-&nbsp;
-							<input class="form-control form-control-xsmall" type="text" maxlength="2">
-							-&nbsp;
-							<input class="form-control form-control-xsmall" type="text" maxlength="4" style="width: 70px">
-						</div>
-
-						<div class="form-group">
-							<label class="form-label">Item 4b on your licence</label>
-							<input class="form-control form-control-xsmall" type="text" maxlength="2">
-							-&nbsp;
-							<input class="form-control form-control-xsmall" type="text" maxlength="2">
-							-&nbsp;
-							<input class="form-control form-control-xsmall" type="text" maxlength="4" style="width: 70px">
-						</div>
-
-						<div class="form-group">
-							<label class="form-label">Item 5 on your licence</label>
+							<label class="form-label-bold">Licence number <span class="subtext">(item 5 on your licence)</span></label>
 							<input class="form-control" style="width:14em" type="text" maxlength="16">
 							<input class="form-control form-control-xsmall" type="text" maxlength="2">
 						</div>
+						<div class="form-group" data-required="Please enter your passport number">
+							<label class="form-label-bold " for="drivingLicenceFirstName">First name(s) including middle name(s) <span class="subtext">(item 1 on your licence)</span></label>
+							<input class="form-control" id="drivingLicenceFirstName" type="text">
+						</div>
+						<div class="form-group" data-required="Please enter your passport number">
+							<label class="form-label-bold " for="drivingLicenceLastName">Last name <span class="subtext">(item 2 on your licence)</span></label>
+							<input class="form-control" id="drivingLicenceLastName" type="text">
+						</div>
+						<div class="form-group">
+							<label class="form-label-bold">Issue date <span class="subtext">(item 4a on your licence)</span></label>
+							<input class="form-control form-control-xsmall" type="text" maxlength="2">
+							-&nbsp;
+							<input class="form-control form-control-xsmall" type="text" maxlength="2">
+							-&nbsp;
+							<input class="form-control form-control-xsmall" type="text" maxlength="4" style="width: 70px">
+						</div>
+
+						<div class="form-group">
+							<label class="form-label-bold">Expiry date <span class="subtext">(item 4b on your licence)</span></label>
+							<input class="form-control form-control-xsmall" type="text" maxlength="2">
+							-&nbsp;
+							<input class="form-control form-control-xsmall" type="text" maxlength="2">
+							-&nbsp;
+							<input class="form-control form-control-xsmall" type="text" maxlength="4" style="width: 70px">
+						</div>
+
+						<div class="form-group" data-required="Please enter your passport number">
+							<label class="form-label-bold heading-small" for="drivingLicencePostcode">Postcode <span class="subtext">(item 8 on your licence)</span></label>
+							<input class="form-control" id="drivingLicencePostcode" type="text" style="width: 140px">
+						</div>
+					
+
 					</div>		
+
 				
 					<div class='form-group'>
 						<button class="button">
