Fixed references to serviceEndUrl

--- a/app/views/hub/waiting-for-match.html
+++ b/app/views/hub/waiting-for-match.html
@@ -8,7 +8,7 @@
 
 <main id="content" role="main">
   {% include "includes/available-languages.html" %}
-  <meta http-equiv="refresh" content="5;url=/service{{serviceCompleteURL}}{{formQuery}}">
+  <meta http-equiv="refresh" content="5;url={{serviceCompleteURL}}{{formQuery}}">
 
   <div class="grid-row">
     <div class="column-full">
