Content updates for testing

--- a/app/views/hub/choose-a-company.html
+++ b/app/views/hub/choose-a-company.html
@@ -11,7 +11,9 @@
   <div class="grid-row">
     {% include "includes/verify-logo.html" %}
     <div class="column-two-thirds">
-  		<h1 class="heading-large">Select the online identity you<br>want to sign up with</h1>
+  		<h1 class="heading-large">
+        <span class="heading-secondary">1. Picking your digital identity provider</span>
+        Select the digial identity you<br>want to sign up with</h1>
 
         <p>You don't have to be an existing customer with the company that provides it.</p>
 
