--- a/app/views/hub/redirect-to-idp.html
+++ b/app/views/hub/redirect-to-idp.html
@@ -10,7 +10,10 @@
   {% include "includes/available-languages.html" %}
   <div class="grid-row">
     <div class="column-two-thirds">
-      <h1 class="heading-large">Create your {{idpName}} identity account</h1>
+      <h1 class="heading-large">
+        <span class="heading-secondary">2. Confirming your details to verify your identity</span>
+        Create your {{idpName}} identity account
+      </h1>
 
         <p>You'll now verify your identity on the {{idpName}} website.</p>
 
