--- a/app/views/hub/select-documents.html
+++ b/app/views/hub/select-documents.html
@@ -11,7 +11,10 @@
   <div class="grid-row">
     {% include "includes/verify-logo.html" %}
     <div class="column-two-thirds">
-  		<h1 class="heading-large">Which documents can you use to confirm your identity?</h1>
+  		<h1 class="heading-large">
+        <span class="heading-secondary">1. Picking your digital identity provider</span>
+        Which documents can you use to confirm your identity?
+      </h1>
 
       {{data['non-uk-group']}}
       <p>We will recommend you which online identities work best with the documents you are able to provide. Your document details will be checked with the issuing authority.</p>
