--- a/app/views/hub/slide-access-the-service.html
+++ b/app/views/hub/slide-access-the-service.html
@@ -9,11 +9,11 @@
 
   {{ formData | safe }}
 
-	<h1 class="slide-heading">4. Continue to your service</h1>
+	<h1 class="slide-heading">3. Return to GOV.UK to access {{serviceNameLower}}</h1>
 
   <p>Once you've confirmed your identity, you'll be able to safely and securely {{serviceNameLower}}.</p>
 
-  <p>You'll only need to do this once, as next time you'll be able to sign in quickly with the username and password you created with your identity account/</p>
+  <p>You'll only need to do this once, as next time you'll be able to sign in quickly with the username and password you created with your identity account.</p>
 
 <!--   <details role="group">
     <summary role="button" aria-controls="details-content-0" aria-expanded="false">
