--- a/app/views/hub/slide-all.html
+++ b/app/views/hub/slide-all.html
@@ -1,32 +1,40 @@
-{% extends "layout_slide.html" %}
+{% extends "layout.html" %}
 
-{% block body_classes %}hub-start{% endblock %}
-{% block page_title %}Start - GOV.UK Verify - GOV.UK{% endblock %}
+{% block page_title %}
+  GOV.UK prototype kit
+{% endblock %}
 
-{% block slide_content %}
+{% block content %}
 
-<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/select-documents" accept-charset="UTF-8" method="get">
+<main id="content" role="main">
+  {% include "includes/available-languages.html" %}
 
-  {{ formData | safe }}
+  <div class="grid-row">
+    <div class="column-two-thirds">
+			<h1 class="heading-large">Setting up your  digital identity</h1>
 
-	<h1 class="slide-heading">Setting up an online identity</h1>
-
-	<p>You'll need to set up your own online identity so you can safely and securely {{serviceNameLower}}.</p>
-	<p>The setting up your online identity takes 4 steps:</p>
+	<p>The 3 steps to setting up your digital identity:</p>
 	<ul class="list list-number">
-		<li>Pick which online identity you want to create</li>
-		<li>Create your online identity with the provider</li>
-		<li>Confirm your idenity</li>
-		<li>Continue to your service</li>
+		<li class=''>Select the identity provider you want use.</li>
+		<li class=''>Confirm your details so the provider can verify your identity.</li>
+		<li class=''>Return to GOV.UK to access {{serviceNameLower}}.</li>
 	</ul>
-	<p>You'll need about 15 minutes to get set up.<!--  up but then you'll have an account that can securely access a range of govenment services --></p>
+	<p>It takes about 15 minutes to get set up.</p>
+<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/select-documents" accept-charset="UTF-8" method="get">
 
   <div class="form-group">
     <div class="actions">
-      <input class="button" id="next-button" type="submit" value="Pick an online identity provider">
-      <span style="display:inline-block; margin-top: 5px; padding-left: 5px; font-size: 24px"> or <a href="/hub/slide-pick-idp">find out more</a></span>
+      <input class="button" id="next-button" type="submit" value="Pick a digital identity provider">
+      <span style="display:inline-block; margin-top: 10px; padding-left: 5px; font-size: 19px"> or <a href="/hub/slide-pick-idp">find out more</a></span>
     </div>
   </div>
 </form>
+
+
+    </div>
+  </div>
+</main>
+
+
 
 {% endblock %}
