--- a/app/views/hub/slide-create-account.html
+++ b/app/views/hub/slide-create-account.html
@@ -5,11 +5,11 @@
 
 {% block slide_content %}
 
-<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/slide-confirm-identity" accept-charset="UTF-8" method="get">
+<form id="start-page-form" class="js-validate" novalidate="novalidate" action="/hub/slide-access-the-service" accept-charset="UTF-8" method="get">
 
   {{ formData | safe }}
 
-	<h1 class="slide-heading">2. Create your online identity</h1>
+	<h1 class="slide-heading">2. Confirm your details so the provider can verify your identity</h1>
 
   <p>You'll be taken to the companies website to create an online identity.</p>
   <!-- <p>You'll need to create a username and password, and add some personal details so they know who you are.</p> -->
