--- a/app/views/hub/sm-signin-2col.html
+++ b/app/views/hub/sm-signin-2col.html
@@ -12,17 +12,17 @@
     <div class="grid-row">      
         <div class="column-two-thirds" style="">
               
-          <h1 class="heading-large">Set up or sign in with an identity account</h1>
+          <h1 class="heading-large">Set up or sign in with a digital identity</h1>
         </div>
     </div>
     <div class="grid-row">
       <div class="column-half">
-        <h2 class="heading-medium">Set up an identity account</h2>
-        <p>Set up an identity account with a certified company so you can securely sign in to {{serviceNameLower}}.</p>
+        <h2 class="heading-medium">Set up a digital identity</h2>
+        <p>Set up a digital identity with an identity provider so you can securely sign in to {{serviceNameLower}}.</p>
 
         <form id="" class="js-validate" novalidate="novalidate" action="/hub/slide-all{{formQuery}}" accept-charset="UTF-8" method="get">
           {{formData | safe}}
-          <input class="button" id="next-button" type="submit" value="Set up an identity account">
+          <input class="button" id="next-button" type="submit" value="Set up a digital identity">
           <input type="hidden" name="registration" value="true">
         </form>
         <br>
@@ -30,8 +30,8 @@
          
       </div>
       <div class="column-half">
-          <h2 class="heading-medium">Sign in with your identity account</h2>
-          <p>Sign in with an identity account that you set up with a certified company in the past.</p>
+          <h2 class="heading-medium">Sign in with your digital identity</h2>
+          <p>Sign in with a digital identity that you set up with an identity provider in the past.</p>
 
           {{formData | safe}}
           
@@ -40,8 +40,10 @@
             {% for idp in idps %}
               <li class="idp-links">
                 <div class="button-wrap">
-                  <form method="POST" action="{{idpRoot}}/{{ idp.slug }}/sign-in{{formQuery}}&idp={{idp.slug}}&serviceLOA={{serviceLOA}}">
+                  <form method="POST" action="{{idpRoot}}/sign-in{{formQuery}}&idp={{idp.slug}}&serviceLOA={{serviceLOA}}">
                     <input type="hidden" name="registration" value="false">
+                    <input type="hidden" name="idpChoice" value="{{idp.slug}}">
+
                     <div class="idp-icon-container">
                       <img src="/public/images/idp-icons/{{idp.slug}}.png" class="idp-icon">
                     </div>
@@ -53,20 +55,18 @@
             {% endfor %}
             </ul>
           </div>
-           <p style="text-align: left;">UK government trusts these certified companies as they are part of GOV.UK Verify.</p>
+           <p style="text-align: left;">UK government trusts these identity providers as they’re part of GOV.UK Verify.</p>
           <img src="/public/images/verify-certified-badge.svg" width="75%" class="">
           <br>
           <br>
           <details  style="">
             <summary><span class="summary">What is GOV.UK Verify?</span></summary>
             <div class="" style="text-align: left;">
-              <p>GOV.UK Verify is designed by the UK government to fight the growing problem of identity account theft.</p>
+              <p>GOV.UK Verify is designed by the UK government to fight the growing problem of identity theft.</p>
 
-              <p>Companies apply to be part of GOV.UK Verify. They are certified when they meet security and privacy standards set by government so you can trust them with your personal information.</p>
+              <p>Identity providers apply to be part of GOV.UK Verify. They are certified when they meet security and privacy standards set by government so you can trust them with your personal information.</p>
 
-              <p>When a government service uses GOV.UK Verify, you can access the service with the identity account you set up with the certified company.
-              </p>
-
+              <p>When a government service uses GOV.UK Verify, you can access the service with the digital identity you set up with the identity provider.</p>
             </div>
           </details>
 
